@@ -2233,3 +2233,4 @@
 ( cvs diff -u -r 1.5.2.40 -r 1.5.2.41 src/gtk/pluginwindow.c;  ) > 2.7.0cvs4.patchset
 ( cvs diff -u -r 1.274.2.161 -r 1.274.2.162 src/mainwindow.c;  ) > 2.7.0cvs5.patchset
 ( cvs diff -u -r 1.52.2.34 -r 1.52.2.35 src/prefs_folder_item.c;  ) > 2.7.0cvs6.patchset
+( cvs diff -u -r 1.382.2.349 -r 1.382.2.350 src/compose.c;  cvs diff -u -r 1.105.2.76 -r 1.105.2.77 src/prefs_account.c;  cvs diff -u -r 1.49.2.23 -r 1.49.2.24 src/prefs_account.h;  ) > 2.7.0cvs7.patchset
