@@ -126,6 +126,12 @@ struct _PrefsAccount
 	gchar    *auto_bcc;
 	gboolean  set_autoreplyto;
 	gchar    *auto_replyto;
+#ifdef USE_ASPELL
+	gboolean  enable_default_dictionary;
+	gchar	 *default_dictionary;
+	gboolean  enable_default_alt_dictionary;
+	gchar	 *default_alt_dictionary;
+#endif
 
 	/* Privacy */
 	gchar	 *default_privacy_system;
